--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "class-transformer": "^0.4.0",
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
